Official launcher now working